# sigproc2

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  README.md  version.hpp.in
.github/workflows/: build.yml
applications/: CMakeLists.txt  bandpass.cpp  chop_fil.cpp  decimate.cpp  header.cpp  sig_bandpass.cpp  sig_chopfil.cpp  sig_decimate.cpp  sig_header.cpp
cmake/: FindFFTW.cmake
include/sigproc/: exceptions.hpp  fileIO.hpp  filterbank.hpp  filterbank_header.hpp  filterbank_output.hpp  header.hpp  io.hpp  numbits.hpp  outputfilfile.hpp  params.hpp  utils.hpp
lib/: CMakeLists.txt  angles.cpp  exceptions.cpp  fileIO.cpp  header.cpp  io.cpp  kernels.cpp  numbits.cpp
lib/sigproc/: angles.hpp  exceptions.hpp  kernels.hpp  utils.hpp
src/: angles.hpp  bitsinfo.cpp  bitsinfo.hpp  exceptions.hpp  fileIO.cpp  fileIO.hpp  header_params.hpp  kernels.hpp  pack_unpack.cpp  pack_unpack.hpp  utils.hpp
tests/: CMakeLists.txt  tests.cpp
